[metadata]
name = dockerjudge
version = attr: dockerjudge.__version__
author = 汪心禾
author_email = wangxinhe06@gmail.com
description = A Docker Based Online Judge Engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wxh06/dockerjudge
download_url = https://pypi.org/simple/dockerjudge/
project_urls = 
    Bug Tracker = https://github.com/wxh06/dockerjudge/issues
    Documentation = https://dockerjudge.readthedocs.io
    Release notes = https://github.com/wxh06/dockerjudge/releases
    Source Code = https://github.com/wxh06/dockerjudge/tree/master
keywords = docker, online-judge, online-judge-engine
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = dockerjudge
python_requires = >=3.6
install_requires = docker>=3.7

[options.extras_require]
tls = docker[tls]>=3.7
websocket = websockets
